@@ -17,6 +17,8 @@ glibc (2.3.6-14) UNRELEASED; urgency=low
     fix the installation path.  (Closes: #370523)
   * patches/kfreebsd/local-sysdeps.diff: update to revision 1583 (from glibc-bsd)
     to fix the build with gcc-4.1.
+  * patches/m32r/local-ports-m32r.diff: remove libc_cv_gcc_unwind_find=yes
+    from m32r/configure by Kazuhiro Inaoka.  (Closes: #371052)
 
   [ Denis Barbier ]
   * debian/patches/localedata/tailor-iso14651_t1.diff: Fix several collation
